<resources>
    <string name="app_name">Asami</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_nav_names">Names</string>
    <string name="bottom_nav_tags">Tags</string>
    <string name="edit_text_hint_search">Search…</string>
    <string name="add_new_name">Add New Name</string>
    <string name="add_new_name_edit_text_enter_name_hint">Enter name…</string>
    <string name="add_new_name_placeholder_name">Name</string>
    <string name="add_new_name_placeholder_tags">Tags</string>
    <string name="add_new_name_edit_text_enter_tags_collections">Enter tags collectins…</string>
    <string name="add_new_name_cancel_button">Cancel</string>
    <string name="add_new_name_placeholder_notes">Notes</string>
    <string name="add_new_name_edit_text_enter_notes">Enter notes…</string>
    <string name="add_new_name_button_text">Create name</string>
    <string name="add_name_button_content_description">Add Name</string>
    <string name="tags_in_tags_collection">Tags in Tags Collection</string>
    <string name="export_names_to_csv">Export Names To .CSV</string>
    <string name="export_tags_to_csv">Export Tags To .CSV</string>
    <string name="export_names_with_tags_list_to_csv">Export Names With Tags List To .CSV</string>
    <string name="export_relationship_table_to_csv">Export Relationship Table To .CSV</string>
    <string name="edit_name">Edit Name</string>
    <string name="save_name">Save Name</string>
    <string name="save_tag">Save Tag</string>
    <string name="edit_tag">Edit Tag</string>
    <string name="tag_name">Tag Name</string>
    <string name="export_menu">Export Menu</string>
    <string name="sort_menu">Sort Menu</string>
    <string name="sort_by_name_ascending">Sort by name ascending</string>
    <string name="sort_by_name_descending">Sort by name descending</string>
    <string name="sort_by_date_added_ascending">Sort by date added ascending</string>
    <string name="sort_by_date_descending">Sort by date descending</string>
</resources>